@@ -1,6 +1,7 @@
 ver 0.23.3 (not yet released)
 * protocol
   - add optional position parameter to "add" and "playlistadd"
+  - allow range in "playlistdelete"
 * output
   - alsa: add option "stop_dsd_silence" to work around DSD DAC noise
 * macOS: fix libfmt related build failure
